添加URL 获取网络资源图片显示到ImageView中

--- a/AndroidTest/textdemo/src/main/res/layout/activity_main.xml
+++ b/AndroidTest/textdemo/src/main/res/layout/activity_main.xml
@@ -142,6 +142,11 @@
             android:layout_height="wrap_content"
             android:text="写入SD卡"
             />
-
+        <Button
+            android:onClick="gotoURL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="URL_HTTP_URLCONNECTION"
+            />
     </LinearLayout>
 </ScrollView>
